# numi

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh  nodus.toml
.github/workflows/: release.yml  rust-ci.yml
crates/numi-cli/: Cargo.toml
crates/numi-cli/assets/: starter-numi.toml
crates/numi-cli/src/: cli.rs  lib.rs  main.rs
crates/numi-cli/tests/: cli_help.rs  config_commands.rs  generate_assets.rs  generate_files.rs  generate_fonts.rs  generate_incremental.rs  generate_l10n.rs  generate_strings_placeholders.rs  package_metadata.rs
crates/numi-config/: Cargo.toml
crates/numi-config/src/: discovery.rs  lib.rs  model.rs  validate.rs  workspace.rs
crates/numi-config/src/tests/: discovery.rs  mod.rs  parse.rs  resolve.rs  sniff.rs  workspace_merge.rs
crates/numi-core/: Cargo.toml
crates/numi-core/benches/: pipeline.rs
crates/numi-core/src/: context.rs  generation_cache.rs  input_filters.rs  lib.rs  output.rs  parse_cache.rs  parse_files.rs  parse_fonts.rs  parse_l10n.rs  parse_xcassets.rs  pipeline.rs  render.rs
crates/numi-core/src/pipeline/: mod.rs
crates/numi-core/src/pipeline/tests/: check.rs  context.rs  generate.rs  helpers.rs  mod.rs
crates/numi-core/src/pipeline/tests/generate/: cache.rs  duplicates.rs  hooks.rs  incremental.rs  mod.rs  rendering.rs
crates/numi-core/templates/objc/: files.jinja
crates/numi-diagnostics/: Cargo.toml
crates/numi-diagnostics/src/: lib.rs
crates/numi-ir/: Cargo.toml
crates/numi-ir/src/: lib.rs  normalize.rs
docs/: context-schema.md  crates-io-release.md  migration-from-swiftgen.md  spec.md
docs/examples/: starter-numi.toml  starter-swiftgen.toml
docs/superpowers/plans/: 2026-04-08-numi-v1-mvp.md  2026-04-08-template-includes.md  2026-04-09-coordinated-issues-2-3-4.md  2026-04-09-files-input.md  2026-04-09-langcodec-l10n.md  2026-04-09-numi-toml-lama-ludo-validation.md  2026-04-09-xcassets-adapter.md  2026-04-09-xcstrings.md  2026-04-10-unified-numi-manifest.md  2026-04-11-cargo-release-prep.md  2026-04-11-cli-help.md  2026-04-11-generic-builtin-template-languages.md  2026-04-12-github-actions-rust-ci-and-release-packaging.md  2026-04-12-homebrew-binary-release-assets.md  2026-04-12-open-source-readiness-blockers.md
docs/superpowers/specs/: 2026-04-08-template-includes-design.md  2026-04-09-builtin-swift-namespacing-design.md  2026-04-09-coordinated-issues-2-3-4-design.md  2026-04-09-files-input-design.md  2026-04-09-langcodec-l10n-design.md  2026-04-09-numi-toml-lama-ludo-validation-design.md  2026-04-09-xcassets-adapter-design.md  2026-04-09-xcstrings-design.md  2026-04-10-unified-numi-manifest-design.md  2026-04-11-appui-performance-improvement-design.md  2026-04-11-cargo-release-prep-design.md  2026-04-11-cli-help-design.md  2026-04-11-generic-builtin-template-languages-design.md  2026-04-11-local-performance-comparison-design.md  2026-04-12-github-actions-rust-ci-and-release-packaging-design.md  2026-04-12-homebrew-binary-release-assets-design.md  2026-04-12-open-source-readiness-blockers-design.md  2026-04-14-maintainability-refactor-design.md
fixtures/bench-mixed-large/: numi.toml
fixtures/bench-mixed-large/Resources/Assets.xcassets/Brand.colorset/: Contents.json
fixtures/bench-mixed-large/Resources/Assets.xcassets/Illustration.imageset/: Contents.json
fixtures/bench-mixed-large/Resources/Localization/en.lproj/: Localizable.strings
fixtures/bench-mixed-large/Resources/Localization/fr.lproj/: Localizable.strings
fixtures/files-basic/: numi.toml
fixtures/l10n-basic/: numi.toml  swiftgen.toml
fixtures/l10n-basic/Resources/Localization/: Localizable.strings
fixtures/multimodule-repo/: numi.toml
fixtures/multimodule-repo/AppUI/: numi.toml
fixtures/multimodule-repo/AppUI/Resources/Assets.xcassets/Brand.colorset/: Contents.json
fixtures/multimodule-repo/Core/: numi.toml  swiftgen.toml
fixtures/multimodule-repo/Core/Resources/Localization/en.lproj/: Localizable.strings
fixtures/multimodule-repo/Core/Resources/Localization/fr.lproj/: Localizable.strings
fixtures/multimodule-repo/apps/assets/: numi.toml
fixtures/multimodule-repo/apps/assets/Resources/Assets.xcassets/Icons/add.imageset/: Contents.json
fixtures/xcassets-basic/: numi.toml  swiftgen.toml
fixtures/xcassets-basic/Resources/Assets.xcassets/Brand.colorset/: Contents.json
fixtures/xcstrings-basic/: numi.toml
fixtures/xcstrings-basic/Resources/Localization/: Localizable.xcstrings
templates/builtin/: l10n.jinja  swiftui-assets.jinja
templates/objc/: assets.jinja  files.jinja  l10n.jinja
templates/swift/: files.jinja
