[package]
name = "numi-cli"
version = "0.1.0"
edition = "2024"
description = "CLI for generating Swift code from Apple project resources."
license = "MIT"
repository = "https://github.com/oops-rs/numi"
homepage = "https://github.com/oops-rs/numi"
documentation = "https://docs.rs/numi-cli"
readme = "../../README.md"

[[bin]]
name = "numi"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
numi-config = { version = "0.1.0", path = "../numi-config" }
numi-core = { version = "0.1.0", path = "../numi-core" }
toml = "0.8"

[dev-dependencies]
serde_json = "1"
