[package]
name = "numi"
version = "0.2.1"
edition = "2024"
description = "CLI for generating Swift code from Apple project resources."
license = "MIT"
repository = "https://github.com/oops-rs/numi"
homepage = "https://github.com/oops-rs/numi"
documentation = "https://docs.rs/numi"
readme = "../../README.md"

[lib]
name = "numi_cli"

[[bin]]
name = "numi"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
numi-config = { version = "0.2.1", path = "../numi-config" }
numi-core = { version = "0.2.1", path = "../numi-core" }
toml = "1"

[dev-dependencies]
serde_json = "1"
