[package]
name = "numi-core"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
atomic-write-file = "0.3"
camino = "1"
minijinja = "2"
numi-config = { path = "../numi-config" }
numi-diagnostics = { path = "../numi-diagnostics" }
numi-ir = { path = "../numi-ir" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "pipeline"
harness = false
