[package]
name = "numi-core"
version = "0.2.0"
edition = "2024"
description = "Core parsing, normalization, rendering, and output orchestration for Numi."
license = "MIT"
repository = "https://github.com/oops-rs/numi"

[dependencies]
atomic-write-file = "0.3"
blake3 = "1"
camino = { version = "1", features = ["serde1"] }
minijinja = "2"
numi-config = { version = "0.2.0", path = "../numi-config" }
numi-diagnostics = { version = "0.2.0", path = "../numi-diagnostics" }
numi-ir = { version = "0.2.0", path = "../numi-ir" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
langcodec = "0.11.0"
xcassets = "0.2.0"

[dev-dependencies]
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "pipeline"
harness = false
